; ModuleID = '/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_internal.c_rj_load.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/pgcrypto/extr_internal.c_rj_load.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.int_ctx = type { i32, %struct.int_ctx*, i32, i32, i32, i32, i32, i32, i32 }

@rj_block_size = common dso_local global i32 0, align 4
@rj_key_size = common dso_local global i32 0, align 4
@rj_iv_size = common dso_local global i32 0, align 4
@rj_init = common dso_local global i32 0, align 4
@rj_encrypt = common dso_local global i32 0, align 4
@rj_decrypt = common dso_local global i32 0, align 4
@intctx_free = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.int_ctx* (i32)* @rj_load to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.int_ctx* @rj_load(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.int_ctx*, align 8
  %4 = alloca %struct.int_ctx*, align 8
  store i32 %0, i32* %2, align 4
  %5 = call %struct.int_ctx* @px_alloc(i32 48)
  store %struct.int_ctx* %5, %struct.int_ctx** %3, align 8
  %6 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %7 = call i32 @memset(%struct.int_ctx* %6, i32 0, i32 48)
  %8 = load i32, i32* @rj_block_size, align 4
  %9 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %10 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %9, i32 0, i32 8
  store i32 %8, i32* %10, align 8
  %11 = load i32, i32* @rj_key_size, align 4
  %12 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %13 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %12, i32 0, i32 7
  store i32 %11, i32* %13, align 4
  %14 = load i32, i32* @rj_iv_size, align 4
  %15 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %16 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %15, i32 0, i32 6
  store i32 %14, i32* %16, align 8
  %17 = load i32, i32* @rj_init, align 4
  %18 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %19 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %18, i32 0, i32 5
  store i32 %17, i32* %19, align 4
  %20 = load i32, i32* @rj_encrypt, align 4
  %21 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %22 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %21, i32 0, i32 4
  store i32 %20, i32* %22, align 8
  %23 = load i32, i32* @rj_decrypt, align 4
  %24 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %25 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %24, i32 0, i32 3
  store i32 %23, i32* %25, align 4
  %26 = load i32, i32* @intctx_free, align 4
  %27 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %28 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %27, i32 0, i32 2
  store i32 %26, i32* %28, align 8
  %29 = call %struct.int_ctx* @px_alloc(i32 48)
  store %struct.int_ctx* %29, %struct.int_ctx** %4, align 8
  %30 = load %struct.int_ctx*, %struct.int_ctx** %4, align 8
  %31 = call i32 @memset(%struct.int_ctx* %30, i32 0, i32 48)
  %32 = load i32, i32* %2, align 4
  %33 = load %struct.int_ctx*, %struct.int_ctx** %4, align 8
  %34 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %33, i32 0, i32 0
  store i32 %32, i32* %34, align 8
  %35 = load %struct.int_ctx*, %struct.int_ctx** %4, align 8
  %36 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  %37 = getelementptr inbounds %struct.int_ctx, %struct.int_ctx* %36, i32 0, i32 1
  store %struct.int_ctx* %35, %struct.int_ctx** %37, align 8
  %38 = load %struct.int_ctx*, %struct.int_ctx** %3, align 8
  ret %struct.int_ctx* %38
}

declare dso_local %struct.int_ctx* @px_alloc(i32) #1

declare dso_local i32 @memset(%struct.int_ctx*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
